--- a/css/main.css
+++ b/css/main.css
@@ -18,18 +18,18 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight:500; 
+    font-weight:500;
     font-family:'Open Sans', Arial, sans-serif;
-	color:#333;
 }
 
 h1{
   font-size: 36px;
-  color:#fff;
+  color:#000;
 }
 
 h2{
   font-size: 20px;
+  color:#333;
 }
 
 h3{
@@ -37,14 +37,24 @@ h3{
   color: #787878;
   font-weight: 400;
   line-height: 24px;
+  color:#333;
 }
 
 h4{
   font-size: 16px;
+  color:#333;
+}
+
+h5 {
+	color:#333;
+}
+
+h6 {
+	color:#333;
 }
 
 a {
-  color: #E8CE0E;
+  color: #ff8e2a;
   -webkit-transition: color 300ms, background-color 300ms;
   -moz-transition: color 300ms, background-color 300ms;
   -o-transition:  color 300ms, background-color 300ms;
@@ -60,10 +70,21 @@ hr {
   border-bottom: 1px solid #fff;
 }
 
+.negrito{
+  font-weight: bold;
+}
+
+.italico{
+  font-style: italic;
+}
+
+.branco{
+  color: #FFF;
+}
 
 .btn-primary {
   padding: 8px 20px;
-  background: #E8CE0E;
+  background: #ff8e2a;
   color: #fff;
   border-radius: 4px;
   border:none;
@@ -71,12 +92,12 @@ hr {
 }
 
 
-.btn-primary:hover, 
+.btn-primary:hover,
 .btn-primary:focus{
-  background: #E8CE0E;
+  background: #ff8e2a;
   outline: none;
   box-shadow: none;
-} 
+}
 
 .btn-transparent {
   border: 3px solid #fff;
@@ -215,17 +236,17 @@ ul.social-share li a {
 }
 
 ul.social-share li a:hover {
-  background: #E8CE0E;
+  background: #ff8e2a;
   color: #fff;
 }
 
 .navbar-brand {
   padding: 0;
   margin:0;
-  color:#E8CE0E;
+  color:#ff8e2a;
 }
 .navbar-header a.navbar-brand {
-  color:#E8CE0E;
+  color:#ff8e2a;
 }
 
 .navbar {
@@ -255,7 +276,7 @@ ul.social-share li a:hover {
 }
 
 .navbar-fixed-top .navbar-nav > li > a:hover{
-	background-color: #E8CE0E;
+	background-color: #ff8e2a;
   color: #fff;
 }
 
@@ -275,7 +296,7 @@ ul.social-share li a:hover {
 .navbar-fixed-top .navbar-nav > .open > a,
 .navbar-fixed-top .navbar-nav > .open > a:hover,
 .navbar-fixed-top .navbar-nav > .open > a:focus {
-  background-color: #E8CE0E;
+  background-color: #ff8e2a;
   color: #fff;
 }
 
@@ -305,7 +326,7 @@ ul.social-share li a:hover {
 .navbar-fixed-top .navbar-nav .dropdown-menu > li:hover > a,
 .navbar-fixed-top .navbar-nav .dropdown-menu > li:focus > a,
 .navbar-fixed-top .navbar-nav .dropdown-menu > li.active > a {
-  background-color: #E8CE0E;
+  background-color: #ff8e2a;
   color: #fff;
 }
 
@@ -359,12 +380,12 @@ ul.social-share li a:hover {
 }
 
 #carousel-slider a i:hover {
-  background:#E8CE0E;
+  background:#ff8e2a;
   color:#fff;
-  border: 1px solid #E8CE0E;
+  border: 1px solid #ff8e2a;
 }
 
-#carousel-slider 
+#carousel-slider
 .carousel-control {
   width:inherit;
 }
@@ -378,7 +399,7 @@ ul.social-share li a:hover {
 }
 
 #carousel-slider
-.carousel-control.left, 
+.carousel-control.left,
 #carousel-slider
 .carousel-control.right {
   background: none;
@@ -392,7 +413,7 @@ ul.social-share li a:hover {
 }
 #feature.transparent-bg {
   margin-top:-40px;
-  
+
 }
 .features{
   padding: 0;
@@ -420,7 +441,7 @@ ul.social-share li a:hover {
   line-height: 110px;
   text-align:center;
   background: #ffffff;
-  color: #E8CE0E;
+  color: #ff8e2a;
   border: 3px solid #ffffff;
   box-shadow: inset 0 0 0 5px #f2f2f2;
   -webkit-box-shadow: inset 0 0 0 5px #f2f2f2;
@@ -433,11 +454,11 @@ ul.social-share li a:hover {
 }
 
 .feature-wrap i:hover {
-  background: #E8CE0E;
+  background: #ff8e2a;
   color: #fff;
-  box-shadow: inset 0 0 0 5px #E8CE0E;
-  -webkit-box-shadow: inset 0 0 0 5px #E8CE0E;
-  border: 3px solid #E8CE0E;
+  box-shadow: inset 0 0 0 5px #ff8e2a;
+  -webkit-box-shadow: inset 0 0 0 5px #ff8e2a;
+  border: 3px solid #ff8e2a;
 }
 
 #recent-works .col-xs-12.col-sm-4.col-md-3{
@@ -488,7 +509,7 @@ ul.social-share li a:hover {
   -webkit-transition: opacity 500ms;
   -moz-transition: opacity 500ms;
   -o-transition: opacity 500ms;
-  transition: opacity 500ms;  
+  transition: opacity 500ms;
   padding: 30px;
 }
 
@@ -507,30 +528,30 @@ ul.social-share li a:hover {
   opacity: 1;
 }
 
-#services {
-  background: #000 url(../images/services/bg_services.jpg);
+#sobre {
+  background: #000 url(../images/fundo-sobre.png);
   background-size: cover;
   margin-top:70px;
 }
 
-#services .lead,
-#services h2{
+#sobre .lead,
+#sobre h2{
   color: #fff;
 }
 
-.services-wrap {
+.sobre-wrap {
   padding: 40px 30px;
   background: #fff;
   border-radius: 4px;
   margin: 0 0 40px;
 }
 
-.services-wrap h3 {
+.sobre-wrap h3 {
   font-size: 20px;
   margin: 10px 0;
 }
 
-.services-wrap .pull-left {
+.sobre-wrap .pull-left {
   margin-right: 20px;
 }
 
@@ -567,7 +588,7 @@ ul.social-share li a:hover {
   background: #db3615;
 }
 
-.progress, 
+.progress,
 .progress-bar {
   height: 15px;
   line-height: 15px;
@@ -638,7 +659,7 @@ ul.social-share li a:hover {
 
 .panel-default>.panel-heading,
 .panel{
-  background-color: #e6e6e6; 
+  background-color: #e6e6e6;
   border:0 none;
   box-shadow:none;
 }
@@ -696,12 +717,12 @@ a.accordion-toggle  i{
 }
 
 .panel-heading.active a.accordion-toggle i{
-  background: #E8CE0E;
+  background: #ff8e2a;
   color: #fff;
 }
 
 .panel-heading.active a.accordion-toggle.collapsed i{
-  background: #E8CE0E;
+  background: #ff8e2a;
   color: #fff;
 }
 
@@ -727,7 +748,7 @@ a.accordion-toggle  i{
 
 .nav-tabs li:last-child{
   border-bottom: 0 none;
-} 
+}
 
 .nav-stacked>li+li{
   margin-top: 0;
@@ -738,8 +759,8 @@ a.accordion-toggle  i{
   color:#fff;
 }
 
-.nav-tabs>li.active>a, 
-.nav-tabs>li.active>a:hover, 
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:hover,
 .nav-tabs>li.active>a:focus {
   border: 0;
   color:#fff;
@@ -816,7 +837,7 @@ a.accordion-toggle  i{
   text-align: center;
 }
 
-#partner h2, 
+#partner h2,
 #partner h3 {
   color: #fff;
 }
@@ -862,7 +883,7 @@ a.accordion-toggle  i{
 ********* About Us Page CSS ******
 **************************/
 .center span {
-	color:#E8CE0E;
+	color:#ff8e2a;
 }
 
 .skill_text {
@@ -896,9 +917,9 @@ a.accordion-toggle  i{
   line-height: 1;
 }
 
-.joomla-skill, 
-.html-skill, 
-.css-skill, 
+.joomla-skill,
+.html-skill,
+.css-skill,
 .wp-skill {
   position: absolute;
   height: 100%;
@@ -918,7 +939,7 @@ a.accordion-toggle  i{
   background: -o-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 28%,rgba(45,125,164,1) 28%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 28%,rgba(45,125,164,1) 28%); /* IE10+ */
   background: linear-gradient(to bottom, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 28%,rgba(45,125,164,1) 28%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#2d7da4',GradientType=0 ); /* IE6-9 */    
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#2d7da4',GradientType=0 ); /* IE6-9 */
 }
 
 .html-skill {
@@ -969,13 +990,13 @@ a.accordion-toggle  i{
   font-weight: 300;
 }
 
-.single-profile-top, 
+.single-profile-top,
 .single-profile-bottom {
   font-weight: 400;
   line-height: 24px;
 }
 
-.single-profile-top, 
+.single-profile-top,
 .single-profile-bottom  {
   border: 1px solid #ddd;
   padding: 15px;
@@ -1026,12 +1047,12 @@ ul.social_icons li  a i{
 }
 
 
-.team .social_icons .fa-facebook:hover, 
-.team .social_icons .fa-twitter:hover, 
+.team .social_icons .fa-facebook:hover,
+.team .social_icons .fa-twitter:hover,
 .team .social_icons .fa-google-plus:hover {
   transform: rotate(360deg);
   -ms-transform:rotate(360deg);
-  -webkit-transform:rotate(360deg); 
+  -webkit-transform:rotate(360deg);
   transition-duration:2s;
   transition-property: all;
   transition-timing-function: ease;
@@ -1153,7 +1174,7 @@ ul.social_icons li  a i{
   margin-left: -32px;
 }
 
-.team .single-profile-top:before, 
+.team .single-profile-top:before,
 .team .single-profile-top:after {
   content: "";
   position: absolute;
@@ -1210,7 +1231,7 @@ ul.social_icons li  a i{
 ****Service page css****
 ***********************/
 
-.services {
+.sobre {
   padding: 0;
 }
 
@@ -1242,7 +1263,7 @@ ul.social_icons li  a i{
 }
 
 .request h4 a{
-  background:#E8CE0E;
+  background:#ff8e2a;
   color: #fff;
   font-size: 14px;
   font-weight: normal;
@@ -1302,7 +1323,7 @@ ul.social_icons li  a i{
   padding-bottom: 0;
 }
 
-.portfolio-items, 
+.portfolio-items,
 .portfolio-filter {
   list-style: none outside none;
   margin: 0 0 40px 0;
@@ -1331,8 +1352,8 @@ ul.social_icons li  a i{
 .portfolio-filter > li a:hover,
 .portfolio-filter > li a.active{
   color:#fff;
-  background: #E8CE0E;
-  border: 1px solid #E8CE0E;
+  background: #ff8e2a;
+  border: 1px solid #ff8e2a;
   box-shadow: none;
   -webkit-box-shadow: none;
 }
@@ -1438,7 +1459,7 @@ ul.social_icons li  a i{
   background:#fff;
 }
 
-#contact-page .contact-form 
+#contact-page .contact-form
 .form-group label {
   color: #4E4E4E;
   font-size: 16px;
@@ -1516,12 +1537,12 @@ textarea#message{
 }
 
 .blog_category li a:hover{
-  background:#E8CE0E;
+  background:#ff8e2a;
   color: #fff;
 }
 
  .badge:before {
-  border-color: transparent transparent transparent #E8CE0E;
+  border-color: transparent transparent transparent #ff8e2a;
   border-style: solid;
   border-width: 10px;
   bottom: -8px;
@@ -1533,7 +1554,7 @@ textarea#message{
 }
 
 .badge {
-  background-color: #E8CE0E;
+  background-color: #ff8e2a;
   border-radius: 5px;
   color: #fff;
   padding: 8px;
@@ -1673,7 +1694,7 @@ ul.faq li > div h3 {
 }
 
 #publish_date {
-  background: #E8CE0E;
+  background: #ff8e2a;
   border-bottom: 5px solid #4e4e4e;
   color: #fff;
   padding: 5px 0;
@@ -1704,10 +1725,10 @@ ul.pagination > li > a i{
   margin-right:5px;
 }
 
-ul.pagination > li.active > a, 
+ul.pagination > li.active > a,
 ul.pagination > li:hover > a {
-  background-color: #E8CE0E !important;
-  border-color: #E8CE0E !important;
+  background-color: #ff8e2a !important;
+  border-color: #ff8e2a !important;
   color: #fff;
 }
 
@@ -1727,7 +1748,7 @@ ul.pagination > li:hover > a {
 }
 
 
-ul.tag-cloud, 
+ul.tag-cloud,
 ul.sidebar-gallery {
   list-style: none;
   padding: 0;
@@ -1748,8 +1769,8 @@ ul.sidebar-gallery {
 }
 
 .tag-cloud li a:hover{
-  background:#E8CE0E;
-  color: #fff;  
+  background:#ff8e2a;
+  color: #fff;
 }
 
 .sidebar-gallery li{
@@ -1767,7 +1788,7 @@ ul.sidebar-gallery {
 ************************/
 #bottom {
   background: #f5f5f5;
-  border-bottom: 5px solid #E8CE0E;
+  border-bottom: 5px solid #ff8e2a;
   font-size: 14px;
 }
 
@@ -1795,7 +1816,7 @@ ul.sidebar-gallery {
 }
 
 #bottom ul li a:hover {
-  color: #E8CE0E;
+  color: #ff8e2a;
 }
 
 #bottom .widget {
@@ -1814,7 +1835,7 @@ ul.sidebar-gallery {
 }
 
 #footer a:hover {
-  color: #E8CE0E;
+  color: #ff8e2a;
 }
 
 #footer ul {
@@ -1827,9 +1848,3 @@ ul.sidebar-gallery {
   display: inline-block;
   margin-left: 15px;
 }
-
-
-
-
-
-
